# ICPC-Assiut-New-Commers-Sheet

./: CMakeLists.txt  Contest-1.cpp  Contest-2.cpp  Contest-3.cpp  README.md  Sheet-1-(DataTypes-Conditions).cpp  Sheet-2-(Loops).cpp  Sheet-3-(Arrays).cpp  Sheet-4-(Strings).cpp  Sheet-5-(Functions).cpp  Sheet-6-(Math-Geometry).cpp  Sheet-7-(Recursion).cpp  Sheet-8-(General-Easy).cpp  Sheet-9-(General-Medium).cpp
