cmake_minimum_required(VERSION 4.0)
project(NewcomersSheet)

set(CMAKE_CXX_STANDARD 20)

add_executable(NewcomersSheet "Sheet-1-(DataTypes-Conditions).cpp"
        "Sheet-2-(Loops).cpp"
        "Sheet-3-(Arrays).cpp"
        "Sheet-4-(Strings).cpp"
        "Sheet-5-(Functions).cpp"
        "Sheet-6-(Math-Geometry).cpp"
        Contest-1.cpp
    Contest-2.cpp
    Contest-3.cpp
        "Sheet-7-(Recursion).cpp"
)
